--- a/campaign/templates/app/account/email-accounts.html
+++ b/campaign/templates/app/account/email-accounts.html
@@ -221,7 +221,7 @@
             </div>
         </form>
         <div class="modal-action">
-            <button class="btn btn-success w-full" onclick="proceedToImapSettings()">
+            <button class="btn btn-success w-full text-gray-100" onclick="proceedToImapSettings()">
                 Next >
             </button>
         </div>
@@ -280,7 +280,7 @@
             <button class="btn btn-ghost flex-1" onclick="goBackToBasicInfo()">
                 < Back
             </button>
-            <button class="btn btn-success flex-1" onclick="testImapConnection()">
+            <button class="btn btn-success flex-1 text-gray-100" onclick="testImapConnection()">
                 Next >
             </button>
         </div>
