--- a/campaign/templates/app/links.html
+++ b/campaign/templates/app/links.html
@@ -320,7 +320,7 @@
         </form>
 
         <div class="modal-action">
-            <button class="btn btn-success w-full" onclick="proceedToLinkStep2()">
+            <button class="btn btn-success w-full text-gray-100" onclick="proceedToLinkStep2()">
                 Next >
             </button>
         </div>
@@ -418,7 +418,7 @@
             <button class="btn btn-ghost flex-1" onclick="backToLinkStep1()">
                 < Back
             </button>
-            <button class="btn btn-success flex-1" onclick="submitNewLink()">
+            <button class="btn btn-success flex-1 text-gray-100" onclick="submitNewLink()">
                 Create Link
             </button>
         </div>
