--- a/campaign/templates/app/products/products.html
+++ b/campaign/templates/app/products/products.html
@@ -184,7 +184,7 @@
         </form>
 
         <div class="modal-action">
-            <button class="btn btn-success w-full" onclick="submitProductForm()">
+            <button class="btn btn-success w-full text-gray-100" onclick="submitProductForm()">
                 <i class="fa-solid fa-save mr-2"></i>
                 Save Product
             </button>
