--- a/campaign/templates/components/nav.html
+++ b/campaign/templates/components/nav.html
@@ -3,75 +3,8 @@
   <!-- Top Section -->
   <div class="flex flex-col items-center gap-y-5">
     <!-- Logo -->
-    <div class="inline-flex h-12 w-12 items-center justify-center rounded-lg ">
-    <svg width="280" height="120" viewBox="126.714 -18.634 153.286 138.634" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <path id="vibeShape" fill-rule="evenodd" d="
-          /* V: Inverted triangle with a hollow center */
-          M5,10 L75,10 L40,75 Z 
-          M20,22 L60,22 L40,52 Z 
-
-          /* I: Simple vertical bar */
-          M85,10 H108 V110 H85 Z
-
-          /* B: Stylized, composed of a stem and two separate bowls */
-          M120,10 H140 V110 H120 Z 
-          M140,10 C180,10 180,55 140,55 Z 
-          M140,60 C180,60 180,110 140,110 Z
-
-          /* E: Three horizontal bars with rounded right corners */
-          M200,10 H260 C271,10 271,32 260,32 H200 Z 
-          M200,49 H260 C271,49 271,71 260,71 H200 Z 
-          M200,88 H260 C271,88 271,110 260,110 H200 Z
-        "></path>
-        <g id="vibeOriginalShape">
-          <path fill-rule="evenodd" d="M49.5 99L0 0H99L49.5 99ZM49.5 68.2L72.6 22H26.4L49.5 68.2Z"></path>
-          <path d="M108.9 0H140.8V99H108.9V0Z"></path>
-          <path d="M150.7 0H210.1C243.1 0 243.1 40.7 210.1 40.7H182.6V58.3H219.45C252.45 58.3 252.45 99 219.45 99H150.7V0Z"></path>
-          <path d="M264 0H354V25.3H264V0ZM264 36.8H354V62.1H264V36.8ZM264 73.7H354V99H264V73.7Z"></path>
-        </g>
-        <path id="bShape" fill-rule="evenodd" d="M0,0 V212 C50,220 125,180 118,136 C111,92 90,106 74,106 C111,106 114,80 108,54 C102,28 67,0 0,0 Z M16,22 L16,86 C50,91 78,80 78,54 C78,28 50,17 16,22 Z M16,127 L16,189 C56,194 88,181 88,158 C88,135 56,122 16,127 Z"></path>
-        <g id="group-1">
-          <path fill-rule="evenodd" d="
-                  M5,10 L75,10 L40,75 Z M20,22 L60,22 L40,52 Z /* V */
-                  M85,10 L108,10 L108,110 L85,110 Z /* I */
-                  M120,10 v100 h22 c35,0 35,-22.5 0,-45 h-5 c35,0 35,-22.5 0,-45 h-17z m20,10 h5 c15,0 15,15 0,25 h-5z m0,40 h10 c15,0 15,15 0,25 h-10z /* B */
-                  M210,10 h70 v22 h-70z M210,49 h70 v22 h-70z M210,88 h70 v22 h-70z /* E */
-                "></path>
-        </g>
-        <g id="group-2">
-          <path fill-rule="evenodd" d="M49.5 99L0 0H99L49.5 99ZM49.5 68.2L72.6 22H26.4L49.5 68.2Z"></path>
-          <path d="M108.9 0H140.8V99H108.9V0Z"></path>
-          <path d="M150.7 0H210.1C243.1 0 243.1 40.7 210.1 40.7H182.6V58.3H219.45C252.45 58.3 252.45 99 219.45 99H150.7V0Z"></path>
-          <path d="M264 0H354V25.3H264V0ZM264 36.8H354V62.1H264V36.8ZM264 73.7H354V99H264V73.7Z"></path>
-        </g>
-        <path id="path-1" fill-rule="evenodd" d="M0,0 V212 C50,220 125,180 118,136 C111,92 90,106 74,106 C111,106 114,80 108,54 C102,28 67,0 0,0 Z M16,22 L16,86 C50,91 78,80 78,54 C78,28 50,17 16,22 Z M16,127 L16,189 C56,194 88,181 88,158 C88,135 56,122 16,127 Z"></path>
-        <g id="group-3">
-          <path fill-rule="evenodd" d="
-                  M5,10 L75,10 L40,75 Z M20,22 L60,22 L40,52 Z /* V */
-                  M85,10 L108,10 L108,110 L85,110 Z /* I */
-                  M120,10 v100 h22 c35,0 35,-22.5 0,-45 h-5 c35,0 35,-22.5 0,-45 h-17z m20,10 h5 c15,0 15,15 0,25 h-5z m0,40 h10 c15,0 15,15 0,25 h-10z /* B */
-                  M210,10 h70 v22 h-70z M210,49 h70 v22 h-70z M210,88 h70 v22 h-70z /* E */
-                "></path>
-        </g>
-        <linearGradient id="vibeGradient" x1="0%" y1="100%" x2="0%" y2="0%">
-          <stop offset="0" stop-color="rgba(82, 32, 3, 1)"></stop>
-          <stop offset="0.35" stop-color="rgba(153, 109, 8, 1)"></stop>
-          <stop offset="1" stop-color="rgba(255, 64, 0, 1)"></stop>
-        </linearGradient>
-      </defs>
-      <g transform="matrix(2.025581, 0, 0, 2.025581, -80.065315, -60.809776)" >
-        <g transform="matrix(1, 0, 0, 1, 97.514618, 12.476502)" fill="rgba(82, 32, 3, 1)">
-          <path fill-rule="evenodd" d=" M5,10 L75,10 L40,75 Z M20,22 L60,22 L40,52 Z /* V */ M85,10 L108,10 L108,110 L85,110 Z /* I */ M120,10 v100 h22 c35,0 35,-22.5 0,-45 h-5 c35,0 35,-22.5 0,-45 h-17z m20,10 h5 c15,0 15,15 0,25 h-5z m0,40 h10 c15,0 15,15 0,25 h-10z /* B */ M210,10 h70 v22 h-70z M210,49 h70 v22 h-70z M210,88 h70 v22 h-70z /* E */ "></path>
-        </g>
-        <g transform="matrix(1, 0, 0, 1, 101.514618, 12.476502)" fill="rgba(255, 64, 0, 1)">
-          <path fill-rule="evenodd" d=" M5,10 L75,10 L40,75 Z M20,22 L60,22 L40,52 Z /* V */ M85,10 L108,10 L108,110 L85,110 Z /* I */ M120,10 v100 h22 c35,0 35,-22.5 0,-45 h-5 c35,0 35,-22.5 0,-45 h-17z m20,10 h5 c15,0 15,15 0,25 h-5z m0,40 h10 c15,0 15,15 0,25 h-10z /* B */ M210,10 h70 v22 h-70z M210,49 h70 v22 h-70z M210,88 h70 v22 h-70z /* E */ "></path>
-        </g>
-        <g fill="url(#vibeGradient)" transform="matrix(1, 0, 0, 1, 99.514618, 12.476502)">
-          <path fill-rule="evenodd" d=" M5,10 L75,10 L40,75 Z M20,22 L60,22 L40,52 Z /* V */ M85,10 L108,10 L108,110 L85,110 Z /* I */ M120,10 v100 h22 c35,0 35,-22.5 0,-45 h-5 c35,0 35,-22.5 0,-45 h-17z m20,10 h5 c15,0 15,15 0,25 h-5z m0,40 h10 c15,0 15,15 0,25 h-10z /* B */ M210,10 h70 v22 h-70z M210,49 h70 v22 h-70z M210,88 h70 v22 h-70z /* E */ "></path>
-        </g>
-      </g>
-    </svg>
+    <div class="nav-link flex h-12 w-12 items-center justify-center rounded-full bg-logo text-gray-500 shadow-lg transition-all duration-200 ring-2 ring-blue-200 hover:scale-105"> 
+      <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 509.119"><path fill="#CED7DE" d="M463.139 284.262l-68.965-55.2c-6.319-5.06-15.65-4.021-20.705 2.298l-38.66 48.321 91.156 74.573 39.469-49.286c5.064-6.326 4.03-15.641-2.295-20.706z"/><path fill="#DBE2E7" d="M463.139 284.262l-35.383-28.321-47.681 60.788.002.002 45.975 37.612 39.382-49.375c5.053-6.334 4.027-15.643-2.295-20.706z"/><path fill="#CED7DE" d="M226.468 47.607l54.461 68.042c4.995 6.242 3.976 15.431-2.266 20.426l-48.454 38.784-74.634-89.107 50.465-40.409c6.242-4.997 15.432-3.976 20.428 2.264z"/><path fill="#DBE2E7" d="M226.47 47.607l25.338 31.659-61.121 48.417-35.112-41.931 50.465-40.411c6.242-4.997 15.431-3.974 20.43 2.266z"/><path fill="#CA2F38" d="M85.368 139.704c16.658-14.565 49.808-38.91 70.207-53.952l74.632 89.111c-40.322 31.363-108.081 71.127-113.286 123.557-5.348 53.889 44.035 101.443 97.704 94.274 47.39-6.325 92.141-74.636 120.186-113.014l91.251 74.653c-15.042 20.4-41.926 52.913-56.493 69.573-207.855 237.763-522.486-75.888-284.201-284.202z"/><path fill="#DF333E" d="M85.368 139.704c16.658-14.565 49.808-38.91 70.207-53.952l35.117 41.937C21.045 259.646 39.807 352.989 97.849 410.84c58.185 57.997 166.377 82.084 282.227-94.112l45.986 37.605c-15.042 20.4-41.926 52.913-56.493 69.573-207.855 237.763-522.486-75.888-284.201-284.202z"/><path fill="#FFCB25" d="M511.614 164.009c1-1.426-.071-2.791-1.83-2.422l-77.866 15.887c-5.495.841-5.678 2.793-1.829 7.442 6.619 8.002 21.007 21.167 24.72 24.779l-29.636 28.76c-1.043 1.013-2.064 1.904-1.031 3.534 1.017 1.609 2.469 1.19 3.939.873l76.221-15.221c6.289-1.403 6.831-3.698 3.078-6.912l-26.711-26.867 30.945-29.853zM350.089 2.483c1-1.426-.071-2.791-1.831-2.422l-77.865 15.887c-5.495.84-5.679 2.793-1.829 7.443 6.617 8.001 21.006 21.164 24.72 24.779l-29.637 28.759c-1.043 1.013-2.066 1.904-1.031 3.534 1.016 1.61 2.467 1.191 3.939.873l76.22-15.221c6.291-1.403 6.832-3.698 3.079-6.912l-26.711-26.866 30.946-29.854z"/><path fill="#FFAF39" d="M511.617 164.009c.997-1.426-.074-2.791-1.835-2.422l-66.791 13.629c-2.629 1.086-2.105 3.076.935 6.753 6.619 7.998 21.008 21.165 24.722 24.778l-29.636 28.759c-1.044 1.011-2.064 1.906-1.032 3.531 1.018 1.612 2.469 1.196 3.939.875l64.718-12.923c4.022-1.423 3.962-3.502.745-6.26l-26.713-26.867 30.948-29.853zM350.091 2.483c.998-1.426-.073-2.791-1.835-2.422l-66.792 13.627c-2.627 1.089-2.104 3.078.936 6.754 6.619 7.999 21.009 21.166 24.722 24.779L277.486 73.98c-1.043 1.011-2.064 1.906-1.032 3.532 1.018 1.611 2.47 1.195 3.939.873l64.718-12.922c4.022-1.422 3.963-3.502.743-6.26l-26.711-26.868 30.948-29.852z"/></svg>
     </div>
 
     <!-- Navigation Icons -->
@@ -81,7 +14,7 @@
         <li>
           <div class="tooltip tooltip-right" data-tip="Products">
             <a href="{% url 'products' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
-              <i class="fa-solid fa-box text-xl"></i>
+              <i class="fa-solid fa-box text-l"></i>
             </a>
           </div>
         </li>
@@ -90,7 +23,7 @@
         <li>
           <div class="tooltip tooltip-right" data-tip="Email Accounts">
             <a href="{% url 'email_accounts' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
-              <i class="fa-solid fa-at text-xl"></i>
+              <i class="fa-solid fa-at text-l"></i>
             </a>
           </div>
         </li>
@@ -99,7 +32,7 @@
         <li>
           <div class="tooltip tooltip-right" data-tip="Leads">
             <a href="{% url 'leads_view' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
-              <i class="fa-solid fa-users text-xl"></i>
+              <i class="fa-solid fa-users text-l"></i>
             </a>
           </div>
         </li>
@@ -108,7 +41,7 @@
         <li>
           <div class="tooltip tooltip-right" data-tip="Messages">
             <a href="{% url 'messages' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
-              <i class="fa-solid fa-envelope text-xl"></i>
+              <i class="fa-solid fa-envelope text-l"></i>
             </a>
           </div>
         </li>
@@ -117,8 +50,8 @@
         <li class="mt-2 mb-2">
           <div class="tooltip tooltip-right" data-tip="Campaigns">
             <a href="{% url 'campaign_view_list' %}" 
-              class="nav-link flex h-12 w-12 items-center justify-center rounded-full bg-base-200 text-blue-600 shadow-lg transition-all duration-200 ring-2 ring-blue-300 hover:scale-105"> 
-              <i class="fa-solid fa-paper-plane text-2xl"></i>
+              class="nav-link flex h-12 w-12 items-center justify-center rounded-full bg-base-200 text-gray-500 shadow-lg transition-all duration-200 ring-2 ring-gray-200 hover:scale-105"> 
+              <i class="fa-solid fa-paper-plane text-xl"></i>
             </a>
           </div>
         </li>
@@ -127,7 +60,7 @@
         <li>
           <div class="tooltip tooltip-right" data-tip="Links">
             <a href="{% url 'links' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
-              <i class="fa-solid fa-link text-xl"></i>
+              <i class="fa-solid fa-link text-l"></i>
             </a>
           </div>
         </li>
@@ -136,7 +69,7 @@
         <li>
           <div class="tooltip tooltip-right" data-tip="Overall Dashboard">
             <a href="{% url 'overall_dashboard' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
-              <i class="fa-solid fa-chart-line text-xl"></i>
+              <i class="fa-solid fa-chart-line text-l"></i>
             </a>
           </div>
         </li>
@@ -149,15 +82,15 @@
     <!-- Feedback -->
     <div class="tooltip tooltip-right" data-tip="Submit Feedback">
       <a href="{% url 'feedback' %}" class="flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
-        <i class="fa-solid fa-comment-dots text-xl"></i>
+        <i class="fa-solid fa-comment-dots text-l"></i>
       </a>
     </div>
 
     <!-- User Account -->
     <div class="tooltip tooltip-right" data-tip="Account Settings">
       <a href="{% url 'account_settings' %}" class="avatar placeholder">
-        <div class="w-10 rounded-full bg-neutral text-neutral-content hover:bg-blue-600 transition-all duration-200 cursor-pointer">
-          <span class="text-lg">F</span>
+        <div class="w-8 rounded-full bg-neutral text-neutral-content hover:bg-blue-600 transition-all duration-200 cursor-pointer">
+          <span class="text-sm">F</span>
         </div>
       </a>
     </div>
@@ -181,6 +114,10 @@
 
 .tooltip {
   z-index: 1000;
+}
+
+.bg-logo{
+  background-color: #146be5;
 }
 </style>
 
