--- a/campaign/templates/app/campaign/view-list.html
+++ b/campaign/templates/app/campaign/view-list.html
@@ -195,7 +195,7 @@ function viewCampaign(id) {
 }
 
 function addNewCampaign() {
-    window.location.href = '/campaigns/new/';
+    window.location.href = '/campaign/campaigns/new/';
 }
 
 function editCampaign(id) {
